--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-python_functions = should_* could_*
+python_functions = should_* could_* test_
 python_classes = A_* An_*
 addopts = --color=yes --maxfail=2 -rf
